cockroach-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: cockroachdb
    app.kubernetes.io/managed-by: cockroach-operator
    app.kubernetes.io/name: cockroachdb
    app.kubernetes.io/part-of: cockroachdb
  name: cockroachdb
  namespace: default
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: cockroachdb-public
    weight: 100
